added Title and Game Over Screens
Created Title screen for launching the application and exiting the application and created Game Over screen for displaying final score, restarting the game and returning to the title screen. Also fixed bugs persistent in the background of the application.